<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menu2</string>
    <string name="add_name">add</string>
    <string name="beginwork_name">beginwork</string>
    <string name="Lay1Activity_name">选择热菜</string>
    <string name="Lay2Activity_name">选择凉菜</string>
    <string name="Lay3Activity_name">选择汤</string>
    <string name="ShowDetail_name">详细内容</string>
    <string name="camera_name">camera</string>
    <string name="result">点菜结果</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	 <string name="button1">添加菜谱</string>
	  <string name="button2">开始准备</string>
	      <string name="add_travel">添加照片</string>
        <string name="back">返回</string>
    <string name="close">退出</string>
	  <string name="addImage">添加图片</string>
      
      <string name="textView1">锅包肉</string>
      <string name="textView2">拔丝地瓜</string>
       <string name="textView3">红烧排骨</string>
       
       <string name="type1">炒菜</string>
      <string name="type2">凉菜</string>
       <string name="type3">汤</string>
       
           <string name="type_prompt">菜品类别</string>
           <string-array name="type_array">
               <item>炒菜</item>
               <item>凉菜</item>
               <item>汤</item>
               
               
           </string-array>

       <string name="chosenCount">0个</string>
     
       
</resources>
