<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >
  
     <Button
         android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button1" />
     
      <Button
          android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/button1"
        android:text="@string/button2" />
 
      <TextView
          android:id="@+id/textView1"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_alignLeft="@id/button1"
          android:layout_alignParentRight="true"
          android:layout_below="@id/button1"
          android:text="@string/textView1"
          android:gravity="center"
          android:textSize="25sp"
          android:textColor="#050505"
          android:background="@drawable/guobaorou_bg"
          android:layout_margin="3dp"
           />
      
       <TextView
          android:id="@+id/textView2"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_alignLeft="@id/textView1"
          android:layout_alignParentRight="true"
          android:layout_below="@id/textView1"
          android:text="@string/textView2"
          android:gravity="center"
          android:textSize="25sp"
            android:textColor="#050505"
          android:background="@drawable/basidigua_bg"
               android:layout_margin="3dp"
         
           />
        <TextView
          android:id="@+id/textView3"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:layout_alignLeft="@id/textView2"
          android:layout_alignParentRight="true"
          android:layout_below="@id/textView2"
          android:text="@string/textView3"
          android:gravity="center"
          android:textSize="25sp"
            android:textColor="#050505"
          android:background="@drawable/hongshaopaigu_bg"
               android:layout_margin="3dp"
           />

        
</RelativeLayout>
