<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
  
    <Button
        android:id="@+id/button1"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:text="确定" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:layout_height="45dp" >
        
        <TextView 
            android:id="@+id/text1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/type1"
            android:textColor="#000000"
            android:textSize="22sp"  
                   
            />
        <TextView 
            android:id="@+id/text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/type2"
            android:textColor="#000000"
            android:textSize="22sp"
                   
            />
        <TextView 
            android:id="@+id/text3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/type3"
            android:textColor="#000000"
            android:textSize="22sp"     
           
            />
        
    </LinearLayout>
    
<ImageView 
        android:id="@+id/cursor" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:scaleType="matrix" 
        android:src="@drawable/a" /> 
        
<android.support.v4.view.ViewPager
    android:id="@+id/vPager"
    android:layout_width="wrap_content"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="#000000"
    android:flipInterval="30"
    android:persistentDrawingCache="animation" />

</LinearLayout>
